syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.jdbc.proto";
option java_outer_classname = "TransactionRequests";
option go_package = "polypheny.com/protos";

package polypheny.protointerface;

message CommitRequest{}

message RollbackRequest{}
